--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         }
 
         .bio-sidebar {
-            background: linear-gradient(135deg, var(--primary-teal-light) 0%, var(--primary-teal) 100%);
+            background: linear-gradient(135deg, var(--primary-sage-light) 0%, var(--primary-sage) 100%);
             color: var(--text-light);
             padding: var(--spacing-xl);
             border-radius: var(--border-radius);
@@ -90,7 +90,7 @@
             background: var(--text-light);
             padding: var(--spacing-lg);
             border-radius: var(--border-radius);
-            border-left: 4px solid var(--primary-teal);
+            border-left: 4px solid var(--primary-sage);
         }
     </style>
 </head>
@@ -101,7 +101,15 @@
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="container nav-container">
-            <a href="index.html" class="nav-brand">Affirming Minds</a>
+            <a href="index.html" class="nav-brand">
+                <svg class="logo-svg" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Brain shape -->
+                    <path d="M8 12c0-4.4 3.6-8 8-8s8 3.6 8 8c0 1.2-.3 2.3-.8 3.3.5.7.8 1.5.8 2.4 0 2.2-1.8 4-4 4-.6 0-1.2-.1-1.7-.4-.8 1.2-2.1 2-3.6 2-1.8 0-3.3-1.1-3.9-2.6C9.6 20.3 8.8 20 8 20c-2.2 0-4-1.8-4-4 0-1.3.6-2.4 1.5-3.1C5.2 12.3 5 11.7 5 11c0-1.7 1.3-3 3-3z" fill="#80987c"/>
+                    <!-- Checkmark -->
+                    <path d="M12 16l2 2 4-4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Affirming Minds
+            </a>
 
             <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span class="hamburger"></span>
@@ -139,9 +147,7 @@
             <div class="container">
                 <div class="bio-container">
                     <div class="bio-main">
-                        <div class="photo-placeholder">
-                            [Photo]
-                        </div>
+                        <img src="images/meg-photo-1.jpg" alt="Meg Wilson, Registered Psychologist at Affirming Minds" class="about-photo">
 
                         <h2>My Story</h2>
 
@@ -234,7 +240,7 @@
                 <h2>Ready to Work Together?</h2>
                 <p>If you're looking for a psychologist who gets it – really gets it – I'd love to support you on your journey.</p>
                 <div class="mt-3">
-                    <a href="contact.html" class="btn btn-primary">Book a Session</a>
+                    <a href="contact.html" class="btn btn-primary">Request an Appointment</a>
                     <a href="services.html" class="btn btn-secondary">Explore Services</a>
                 </div>
             </div>
