--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
         }
 
         .faq-category-header {
-            background: var(--primary-teal);
+            background: var(--primary-sage);
             color: var(--text-light);
             padding: var(--spacing-lg);
         }
@@ -68,14 +68,14 @@
         }
 
         .faq-question:focus {
-            outline: 3px solid var(--primary-teal);
+            outline: 3px solid var(--primary-sage);
             outline-offset: -3px;
         }
 
         .faq-icon {
             font-size: 1.25rem;
             font-weight: bold;
-            color: var(--primary-teal);
+            color: var(--primary-sage);
             transition: var(--transition);
         }
 
@@ -110,13 +110,13 @@
         }
 
         .quick-link-card:hover {
-            border-color: var(--primary-teal);
+            border-color: var(--primary-sage);
             transform: translateY(-2px);
         }
 
         .highlight-box {
             background: linear-gradient(135deg, rgba(74, 155, 155, 0.1), rgba(74, 155, 155, 0.05));
-            border-left: 4px solid var(--primary-teal);
+            border-left: 4px solid var(--primary-sage);
             padding: var(--spacing-lg);
             margin: var(--spacing-md) 0;
             border-radius: 0 var(--border-radius) var(--border-radius) 0;
@@ -130,7 +130,15 @@
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="container nav-container">
-            <a href="index.html" class="nav-brand">Affirming Minds</a>
+            <a href="index.html" class="nav-brand">
+                <svg class="logo-svg" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Brain shape -->
+                    <path d="M8 12c0-4.4 3.6-8 8-8s8 3.6 8 8c0 1.2-.3 2.3-.8 3.3.5.7.8 1.5.8 2.4 0 2.2-1.8 4-4 4-.6 0-1.2-.1-1.7-.4-.8 1.2-2.1 2-3.6 2-1.8 0-3.3-1.1-3.9-2.6C9.6 20.3 8.8 20 8 20c-2.2 0-4-1.8-4-4 0-1.3.6-2.4 1.5-3.1C5.2 12.3 5 11.7 5 11c0-1.7 1.3-3 3-3z" fill="#80987c"/>
+                    <!-- Checkmark -->
+                    <path d="M12 16l2 2 4-4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Affirming Minds
+            </a>
 
             <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span class="hamburger"></span>
@@ -170,7 +178,7 @@
                 <div class="quick-links">
                     <div class="quick-link-card">
                         <h3>Getting Started</h3>
-                        <p>First time booking, what to expect, preparation tips</p>
+                        <p>First time appointments, what to expect, preparation tips</p>
                     </div>
                     <div class="quick-link-card">
                         <h3>Payments & Fees</h3>
@@ -208,7 +216,7 @@
                                 <li><strong>Book a longer appointment with your GP</strong> - Tell them you'd like to discuss your mental health and get a MHCP</li>
                                 <li><strong>Complete an assessment</strong> - Your GP will ask about your mental health and may give you a questionnaire</li>
                                 <li><strong>Receive your plan and referral</strong> - Your GP will create the plan and provide a referral to a psychologist</li>
-                                <li><strong>Book your session</strong> - Contact us with your referral details to book your first session</li>
+                                <li><strong>Request your appointment</strong> - Contact us with your referral details to request your first appointment</li>
                             </ol>
                             <div class="highlight-box">
                                 <strong>Tip:</strong> You can ask your GP to refer you specifically to "Affirming Minds" to streamline the process.
