--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <!-- Skip to main content for accessibility -->
+    <!-- Skip to the main content for accessibility -->
     <a href="#main" class="skip-link">Skip to main content</a>
 
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="container nav-container">
-            <a href="index.html" class="nav-brand">Affirming Minds</a>
+            <a href="index.html" class="nav-brand">
+                <svg class="logo-svg" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Brain shape -->
+                    <path d="M8 12c0-4.4 3.6-8 8-8s8 3.6 8 8c0 1.2-.3 2.3-.8 3.3.5.7.8 1.5.8 2.4 0 2.2-1.8 4-4 4-.6 0-1.2-.1-1.7-.4-.8 1.2-2.1 2-3.6 2-1.8 0-3.3-1.1-3.9-2.6C9.6 20.3 8.8 20 8 20c-2.2 0-4-1.8-4-4 0-1.3.6-2.4 1.5-3.1C5.2 12.3 5 11.7 5 11c0-1.7 1.3-3 3-3z" fill="#80987c"/>
+                    <!-- Checkmark -->
+                    <path d="M12 16l2 2 4-4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Affirming Minds
+            </a>
 
             <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span class="hamburger"></span>
@@ -51,7 +59,7 @@
             <div class="container">
                 <h1>Welcome to a Different Kind of Psychology Practice</h1>
                 <p class="hero-subtitle">Neuro-affirming, inclusive telehealth psychology services across Australia</p>
-                <a href="contact.html" class="btn btn-primary">Book Your First Session</a>
+                <a href="contact.html" class="btn btn-primary">Request an Appointment</a>
             </div>
         </section>
 
@@ -71,6 +79,9 @@
                         <p>Our telehealth-only model means you can access quality psychological care from the comfort of your own space, anywhere in Australia. No fluorescent lights, no waiting rooms, no sensory overwhelm – just genuine support in an environment where you feel safe.</p>
                     </div>
                     <div>
+                        <div style="text-align: center; margin-bottom: var(--spacing-xl);">
+                            <img src="images/meg-photo-2.jpg" alt="Meg Wilson, Registered Psychologist at Affirming Minds" class="hero-photo">
+                        </div>
                         <h3>Our Values</h3>
                         <ul>
                             <li><strong>Client-led care:</strong> You are the expert on your own life</li>
@@ -164,9 +175,9 @@
             <div class="container text-center">
                 <h2>Ready to Start Your Journey?</h2>
                 <p>Taking the first step can feel daunting, but you don't have to do it alone.</p>
-                <p>Book your initial session today and discover what truly affirming psychological support feels like.</p>
+                <p>Request an appointment today and discover what truly affirming psychological support feels like.</p>
                 <div class="mt-3">
-                    <a href="contact.html" class="btn btn-primary">Book Now</a>
+                    <a href="contact.html" class="btn btn-primary">Get Started</a>
                     <a href="faq.html" class="btn btn-secondary">Have Questions?</a>
                 </div>
             </div>
