--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
         }
 
         .service-price {
-            background: var(--primary-teal);
+            background: var(--primary-sage);
             color: var(--text-light);
             padding: var(--spacing-sm) var(--spacing-md);
             border-radius: var(--border-radius);
@@ -62,14 +62,14 @@
         }
 
         .feature-icon {
-            color: var(--primary-teal);
+            color: var(--primary-sage);
             font-weight: bold;
             flex-shrink: 0;
         }
 
         .service-highlight {
             background: linear-gradient(135deg, rgba(74, 155, 155, 0.1), rgba(74, 155, 155, 0.05));
-            border-left: 4px solid var(--primary-teal);
+            border-left: 4px solid var(--primary-sage);
             padding: var(--spacing-md);
             margin: var(--spacing-lg) 0;
             border-radius: 0 var(--border-radius) var(--border-radius) 0;
@@ -98,7 +98,15 @@
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="container nav-container">
-            <a href="index.html" class="nav-brand">Affirming Minds</a>
+            <a href="index.html" class="nav-brand">
+                <svg class="logo-svg" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Brain shape -->
+                    <path d="M8 12c0-4.4 3.6-8 8-8s8 3.6 8 8c0 1.2-.3 2.3-.8 3.3.5.7.8 1.5.8 2.4 0 2.2-1.8 4-4 4-.6 0-1.2-.1-1.7-.4-.8 1.2-2.1 2-3.6 2-1.8 0-3.3-1.1-3.9-2.6C9.6 20.3 8.8 20 8 20c-2.2 0-4-1.8-4-4 0-1.3.6-2.4 1.5-3.1C5.2 12.3 5 11.7 5 11c0-1.7 1.3-3 3-3z" fill="#80987c"/>
+                    <!-- Checkmark -->
+                    <path d="M12 16l2 2 4-4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Affirming Minds
+            </a>
 
             <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span class="hamburger"></span>
@@ -395,9 +403,9 @@
         <section class="section">
             <div class="container text-center">
                 <h2>Ready to Get Started?</h2>
-                <p>Not sure which service is right for you? Book an initial session and we'll work it out together.</p>
+                <p>Not sure which service is right for you? Request an appointment and we'll work it out together.</p>
                 <div class="mt-3">
-                    <a href="contact.html" class="btn btn-primary">Book a Session</a>
+                    <a href="contact.html" class="btn btn-primary">Request an Appointment</a>
                     <a href="pricing.html" class="btn btn-secondary">View Pricing Details</a>
                 </div>
             </div>
