--- a/telehealth.html
+++ b/telehealth.html
@@ -43,7 +43,7 @@
         }
 
         .timeline-number {
-            background: var(--primary-teal);
+            background: var(--primary-sage);
             color: var(--text-light);
             width: 50px;
             height: 50px;
@@ -82,7 +82,7 @@
         }
 
         .tech-card h3 {
-            color: var(--primary-teal);
+            color: var(--primary-sage);
             margin-bottom: var(--spacing-md);
         }
 
@@ -163,7 +163,15 @@
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="container nav-container">
-            <a href="index.html" class="nav-brand">Affirming Minds</a>
+            <a href="index.html" class="nav-brand">
+                <svg class="logo-svg" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Brain shape -->
+                    <path d="M8 12c0-4.4 3.6-8 8-8s8 3.6 8 8c0 1.2-.3 2.3-.8 3.3.5.7.8 1.5.8 2.4 0 2.2-1.8 4-4 4-.6 0-1.2-.1-1.7-.4-.8 1.2-2.1 2-3.6 2-1.8 0-3.3-1.1-3.9-2.6C9.6 20.3 8.8 20 8 20c-2.2 0-4-1.8-4-4 0-1.3.6-2.4 1.5-3.1C5.2 12.3 5 11.7 5 11c0-1.7 1.3-3 3-3z" fill="#80987c"/>
+                    <!-- Checkmark -->
+                    <path d="M12 16l2 2 4-4" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                Affirming Minds
+            </a>
 
             <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span class="hamburger"></span>
@@ -205,8 +213,8 @@
                     <div class="timeline-item">
                         <div class="timeline-number">1</div>
                         <div class="timeline-content">
-                            <h3>Book Your Session</h3>
-                            <p>Use our online booking system through Halaxy to find a time that works for you. You can book sessions weeks in advance or as soon as the next available slot.</p>
+                            <h3>Request Your Appointment</h3>
+                            <p>Contact us to request an appointment that works for you. We'll arrange a time that suits your schedule.</p>
                         </div>
                     </div>
 
@@ -432,7 +440,7 @@
                         <li>Take some time to decompress</li>
                         <li>Write down any thoughts or reflections while they're fresh</li>
                         <li>Be gentle with yourself - therapy can be tiring</li>
-                        <li>Book your next session to maintain continuity</li>
+                        <li>Arrange your next session to maintain continuity</li>
                     </ul>
                 </div>
             </div>
@@ -444,7 +452,7 @@
                 <h2>Ready to Experience Telehealth Therapy?</h2>
                 <p>Discover how comfortable and effective online therapy can be.</p>
                 <div class="mt-3">
-                    <a href="contact.html" class="btn btn-primary">Book Your First Session</a>
+                    <a href="contact.html" class="btn btn-primary">Request an Appointment</a>
                     <a href="faq.html" class="btn btn-secondary">More Questions?</a>
                 </div>
             </div>
